fix: overflow-x

--- a/src/pages/Home/components/OurMissionMobile/style.css
+++ b/src/pages/Home/components/OurMissionMobile/style.css
@@ -46,8 +46,10 @@
     background-color: #F5E7FF;
     width: 100px;
     height: 100px;
+    overflow-x: hidden;
 }
 
 .MissionBackground1Mobile {
     display: none;
+    overflow-x: hidden;
 }
